--- a/rca/project_styleguide/templates/patterns/molecules/card/card--result.html
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card--result.html
@@ -19,7 +19,7 @@
                     {% if item.link %}</span>{% endif %}
                 </h3>
                 {% if item.date %}
-                    <div class="card__description card__year">{{ item.date|date:'d F Y' }}</div>
+                    <div class="card__description card__year">{{ item.date|date:'j F Y' }}</div>
                 {% endif %}
             </div>
         </div>
