--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--editorial.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--editorial.html
@@ -11,7 +11,7 @@
         <h3 class="body body--two key-details__sub-heading">Date</h3>
         <ul class="key-details__list">
             <li class="key-details__list-item">
-                {{ page.published_at|date:'d F Y' }}
+                {{ page.published_at|date:'j F Y' }}
             </li>
         </ul>
     </div>
