--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.html
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.html
@@ -23,7 +23,7 @@
                     {% endif %}
 
                         <div class="title-area__meta">
-                            Last updated {{ page.last_published_at|date:'d F Y' }}
+                            Last updated {{ page.last_published_at|date:'j F Y' }}
                         </div>
                 </div>
             </div>
