--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--schools.html
@@ -32,7 +32,7 @@
     <div class="key-details__section key-details__section--date">
         <h3 class="body body--two key-details__sub-heading">Next open day</h3>
         <ul class="key-details__list" >
-            <li class="key-details__list-item">{{ page.next_open_day_date|date:'d M Y' }}</li>
+            <li class="key-details__list-item">{{ page.next_open_day_date|date:'j M Y' }}</li>
             {% if page.link_to_open_days %}
             <li class="key-details__list-item">
                 <a class="key-details__link link link--secondary link--link" href="{{ page.link_to_open_days }}">
