Pluralise read time

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--editorial.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--editorial.html
@@ -50,7 +50,7 @@
         <ul class="key-details__list">
             <li class="key-details__list-item">
                 {% get_reading_time_minutes page 'body' as reading_time_minutes %}
-                {{ reading_time_minutes }} minute read
+                {{ reading_time_minutes }}
             </li>
         </ul>
     </div>
