Refactoring intro to use modifier instead of page name

--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--dev-all-fields.html
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--dev-all-fields.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             {% if page.introduction %}
-                    <div class="introduction grid">
+                    <div class="introduction introduction--indented grid">
                         <div class="introduction__container">
                             <h2 class="introduction__text section__heading heading heading--five">
                                 {{ page.introduction }}
