--- a/rca/project_styleguide/templates/patterns/pages/schools/schools.html
+++ b/rca/project_styleguide/templates/patterns/pages/schools/schools.html
@@ -35,7 +35,7 @@
                 {% endif %}
             </div>
             {% if page.introduction %}
-                <div class="introduction grid">
+                <div class="introduction introduction--indented grid">
                     <div class="introduction__container">
                         <h2 class="section__heading heading heading--five" property="schema:description">
                             {{ page.introduction|richtext }}
