--- a/rca/static_src/sass/components/_introduction.scss
+++ b/rca/static_src/sass/components/_introduction.scss
@@ -6,6 +6,19 @@
         margin-bottom: ($gutter * 2);
     }
 
+    &--indented {
+        #{$root}__container {
+            margin-bottom: $gutter;
+            grid-column: 1 / span 2;
+
+            @include media-query(large) {
+                grid-column: 3 / span 2;
+                margin-bottom: ($gutter * 2);
+                margin-right: $gutter;
+            }
+        }
+    }
+
     &__text {
         margin-bottom: ($gutter * 2);
 
@@ -21,21 +34,6 @@
         &#{$root}--narrow {
             @include media-query(large) {
                 margin-right: 33%;
-            }
-        }
-    }
-
-    .app--landing-page &,
-    .app--school &,
-    .app--guide & {
-        #{$root}__container {
-            margin-bottom: $gutter;
-            grid-column: 1 / span 2;
-
-            @include media-query(large) {
-                grid-column: 3 / span 2;
-                margin-bottom: ($gutter * 2);
-                margin-right: $gutter;
             }
         }
     }
