[802] add event eligibility

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--event.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--event.html
@@ -38,12 +38,12 @@
         </ul>
     </div>
 
-    {% if page.who_can_attend %}
+    {% if page.eligibility %}
     <div class="key-details__section key-details__section--who">
         <h3 class="body body--two key-details__sub-heading">Who {% if page.past %}could{% else %}can{% endif %} attend</h3>
         <ul class="key-details__list">
             <li class="key-details__list-item">
-                {{ page.who_can_attend }}
+                {{ page.eligibility }}
             </li>
         </ul>
     </div>
