Adds accordion block

--- a/rca/project_styleguide/templates/patterns/pages/editorial/editorial_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/editorial/editorial_detail.html
@@ -123,9 +123,9 @@
                     </div>
                 {% endif %}
 
-                {% if page.accordion %}
+                {% if page.more_information %}
                     <div class="section__row">
-                        {% include "patterns/organisms/accordion-block/accordion-block.html" with accordion_id='1' accordions=page.accordion title=page.accordion_title %}
+                        {% include "patterns/organisms/accordion-block/accordion-block.html" with accordion_id='1' accordions=page.more_information title=page.more_information_title %}
                     </div>
                 {% endif %}
 
