Tidying up, avoid attribute errors if values aren't set

--- a/rca/project_styleguide/templates/patterns/pages/editorial_event_landing/editorial_event_landing.html
+++ b/rca/project_styleguide/templates/patterns/pages/editorial_event_landing/editorial_event_landing.html
@@ -31,7 +31,7 @@
                         <h2 class="section__heading section__heading--primary heading heading--two">News</h2>
                     </div>
                     <div class="section__content grid">
-                        {% include "patterns/organisms/news/news_api_content.html" with news=page.news news_view_all=page.news_view_all modifier="news--single-feature" %}
+                        {% include "patterns/organisms/news/news_api_content.html" with news=news news_view_all=page.news_view_all modifier="news--single-feature" %}
                     </div>
                 </div>
             </section>
