--- a/rca/project_styleguide/templates/patterns/pages/editorial_event_landing/editorial_event_landing.html
+++ b/rca/project_styleguide/templates/patterns/pages/editorial_event_landing/editorial_event_landing.html
@@ -43,7 +43,7 @@
                         <h2 class="section__heading section__heading--primary heading heading--two">Events</h2>
                     </div>
                     <div class="section__content grid">
-                        {% include "patterns/organisms/news/news_api_content.html" with news=page.events news_view_all=page.events_view_all modifier="news--single-feature" %}
+                        {% include "patterns/organisms/news/news_api_content.html" with news=events news_view_all=page.events_view_all modifier="news--single-feature" %}
                     </div>
                 </div>
             </section>
