--- a/rca/project_styleguide/templates/patterns/pages/editorial_event_landing/editorial_event_landing.html
+++ b/rca/project_styleguide/templates/patterns/pages/editorial_event_landing/editorial_event_landing.html
@@ -54,21 +54,21 @@
                 <div class="section__row section__row--last-small">
                     <div class="section__header section__header--bottom-space grid">
                         <h2 class="section__heading section__heading--secondary section__heading--tight heading heading--two">Stories</h2>
-                        {% if page.stories_intro %}
+                        {% if page.stories_summary_text %}
                             <div class="section__introduction layout__start-one layout__span-two layout__@large-start-four layout__@large-span-one">
-                                {{ page.stories_intro|richtext }}
+                                {{ page.stories_summary_text|richtext }}
                             </div>
                         {% endif %}
                     </div>
-                    {% if page.stories %}
+                    {% if stories %}
                     <div class="section__content grid">
-                        {% include "patterns/organisms/carousel/carousel.html" with carousel=page.stories modifier='carousel carousel--no-margin' datatag='data-carousel' %}
+                        {% include "patterns/organisms/carousel/carousel.html" with carousel=stories modifier='carousel carousel--no-margin' datatag='data-carousel' %}
                     </div>
                     {% endif %}
-                    {% if page.stories_link %}
+                    {% if page.stories_link_target_url %}
                     <div class="section__action grid">
-                        <a class="layout__@large-start-two link link--primary link--link body body--two" href="{{ page.stories_link }}">
-                            <span class="link__label">Browse all stories</span>
+                        <a class="layout__@large-start-two link link--primary link--link body body--two" href="{{ page.stories_link_target_url }}">
+                            <span class="link__label">{% firstof page.stories_link_text 'Browse all stories' %}</span>
                             <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                         </a>
                     </div>
