Adds video fields for talks section

--- a/rca/project_styleguide/templates/patterns/pages/editorial_event_landing/editorial_event_landing.html
+++ b/rca/project_styleguide/templates/patterns/pages/editorial_event_landing/editorial_event_landing.html
@@ -84,22 +84,22 @@
                         <h2 class="section__heading section__heading--secondary section__heading--tight heading heading--two">
                             Talks
                         </h2>
-                        {% if page.talks_intro %}
+                        {% if page.talks_summary_text %}
                             <div class="section__introduction layout__start-one layout__span-two layout__@large-start-four layout__@large-span-one">
-                                {{ page.talks_intro }}
+                                {{ page.talks_summary_text }}
                             </div>
                         {% endif %}
                     </div>
                     <div class="section__content">
 
                         {% if page.talks_image %}
-                            {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=page.talks_video out_of_grid=False curriculum=False heading=False has_meta=False copy=False subheading=False image=page.talks_image caption=page.talks_cta video=page.talks_video modifier="small-bottom-margin image-video-block--no-padding" %}
+                            {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=page.video out_of_grid=False curriculum=False heading=False has_meta=False copy=False subheading=False image=page.talks_image caption=page.video_caption video=page.video modifier="small-bottom-margin image-video-block--no-padding" %}
                         {% endif %}
 
-                        {% if page.talks_link %}
+                        {% if page.talks_link_target_url %}
                         <div class="section__action grid">
-                            <a class="layout__@large-start-four link link--primary link--link body body--two" href="{{ page.talks_link }}">
-                                <span class="link__label">Browse all Talks</span>
+                            <a class="layout__@large-start-four link link--primary link--link body body--two" href="{{ page.talks_link_target_url }}">
+                                <span class="link__label">{% firstof page.talks_link_text 'Browse all Talks' %}</span>
                                 <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                             </a>
                         </div>
