--- a/rca/project_styleguide/templates/patterns/pages/editorial_event_landing/editorial_event_landing.html
+++ b/rca/project_styleguide/templates/patterns/pages/editorial_event_landing/editorial_event_landing.html
@@ -110,7 +110,7 @@
             </section>
 
             {# CTA #}
-            <section class="section section--start section--end bg bg--dark anchor-heading" id="media-centre">
+            <section class="section section--start section--end bg bg--dark anchor-heading" id="{{custom_tab_heading.link}}">
                 <div class="section__row section__row--last">
                     {% for block in page.cta_block %}
                         {% include "patterns/molecules/text-teaser/text-teaser.html" with teaser=block.value %}
