--- a/rca/static_src/sass/components/_project-overview.scss
+++ b/rca/static_src/sass/components/_project-overview.scss
@@ -1,7 +1,7 @@
 .project-overview {
     $root: &;
 
-    &--school {
+    &--condensed {
         #{$root}__media {
             @include media-query(large) {
                 padding-top: 0;
