--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -654,8 +654,8 @@
         }
     }
 
-    // School page has black sections either side of stat block
-    &.section--school-stat-block {
+    // Black sections either side of stat block
+    &.section--both-dark {
         #{$root}__notch {
             &:last-child {
                 #{$root}__notch-fill {
@@ -663,6 +663,30 @@
 
                     &::before {
                         background-color: $color--black;
+                    }
+                }
+            }
+        }
+    }
+
+    &.section--light-to-dark {
+        #{$root}__notch {
+            &:last-child {
+                #{$root}__notch-fill {
+                    background-color: $color--black;
+
+                    &::before {
+                        background-color: $color--black;
+                    }
+                }
+            }
+
+            &:first-child {
+                #{$root}__notch-fill {
+                    background-color: $color--white;
+
+                    &::before {
+                        background-color: $color--white;
                     }
                 }
             }
