--- a/rca/project_styleguide/templates/patterns/molecules/search-result/search-result.html
+++ b/rca/project_styleguide/templates/patterns/molecules/search-result/search-result.html
@@ -1,35 +1,13 @@
 {% load static wagtailcore_tags wagtailsearchpromotions_tags wagtailimages_tags %}
 
-{# breadcrumbs #}
-{% if result.get_ancestors|length > 2 %}
-    <div>
-    {% for ancestor in result.get_ancestors %}
-        {% if not ancestor.is_root %}
-            {% if ancestor.depth > 2 %}
-                {{ ancestor.title }}
-                {% if ancestor.depth|add:1 < result.depth %}
-                    &nbsp;/&nbsp;
-                {% endif %}
-            {% else %}/{% endif %} {# the first one #}
+<div class="search-result">
+    <a class="search-result__link" href="{% pageurl result %}">
+        <h3 class="search-result__heading">{% firstof result.listing_title result.title %}</h3>
+        {% if result.listing_meta %}<p class="search-result__meta">{{ result.listing_meta }}</p>{% endif %}
+        {% if pick.description or result.listing_summary or result.search_description %}
+            <p class="search-result__summary">{% firstof pick.description result.listing_summary result.search_description %}</p>
         {% endif %}
-    {% endfor %}
-    </div>
-{% endif %}
-
-{% if result.listing_image %}
-    <a href="{% pageurl result %}">
-        {% image result.listing_image fill-450x300 %}
     </a>
-{% endif %}
-
-<h4>
-    <a href="{% pageurl result %}">
-        {% firstof result.listing_title result.title %}
-    </a>
-</h4>
-
-{% if pick.description or result.listing_summary or result.search_description %}
-    <p>{% firstof pick.description result.listing_summary result.search_description %}</p>
-{% endif %}
+</div>
 
 
