--- a/rca/project_styleguide/templates/patterns/pages/search/search.html
+++ b/rca/project_styleguide/templates/patterns/pages/search/search.html
@@ -7,42 +7,62 @@
 
 {% block content %}
 
-    <h1>{% if search_query %}Search results for &ldquo;{{ search_query }}&rdquo;{% else %}Search{% endif %}</h1>
+    <div class="page">
 
-    <form action="{% url 'search' %}" method="get" role="search">
-        <input type="text" placeholder="Search…" name="q"{% if search_query %} value="{{ search_query }}"{% endif %}>
-        <input type="submit" value="Search">
-    </form>
+        <header class="page__header bg bg--dark">
+            <div class="title-area title-area--index grid">
+                <div class="title-area__content">
+                    <h1 class="title-area__heading heading heading--display-two">Search results</h1>
+                    <form action="{% url 'search' %}" method="get" role="search">
+                        <input type="text" placeholder="Search…" name="q"{% if search_query %} value="{{ search_query }}"{% endif %}>
+                        <input type="submit" value="Search">
+                    </form>
+                </div>
+            </div>
+        </header>
+        <div class="page__content">
 
-    {% get_search_promotions search_query as search_picks %}
-    {% if search_picks %}
-         <ul>
-            {% for pick in search_picks %}
-                <li>
-                    {% include "patterns/molecules/search-result/search-result.html" with result=pick.page.specific %}
-                </li>
-             {% endfor %}
-         </ul>
-    {% endif %}
+            <section class="section bg bg--light">
 
-    {% if search_results %}
+                {% if search_query %}
+                    {% with count=search_results.paginator.count %}
+                        <div class="search__header grid">
+                            <h2 class="layout__@large-start-two layout__@large-span-three">Results for ‘{{ search_query }}’ {{ count }}</h2>
+                        </div>
+                    {% endwith %}
+                {% endif %}
 
-        {% with count=search_results.paginator.count %}
-            {{ count }} result{{ count|pluralize }} found.
-        {% endwith %}
+                {% get_search_promotions search_query as search_picks %}
+                {% if search_picks %}
+                    <ul class="grid">
+                        {% for pick in search_picks %}
+                            <li class="layout__@large-start-two layout__@large-span-three">
+                                {% include "patterns/molecules/search-result/search-result.html" with result=pick.page.specific %}
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
 
-        <ul>
-            {% for result in search_results %}
-                <li>
-                    {% include "patterns/molecules/search-result/search-result.html" with result=result.specific %}
-                </li>
-            {% endfor %}
-        </ul>
+                {% if search_results %}
 
-        {% include "patterns/molecules/pagination/pagination.html" with paginator_page=search_results %}
+                    <ul class="grid">
+                        {% for result in search_results %}
+                            <li class="layout__@large-start-two layout__@large-span-three">
+                                {% include "patterns/molecules/search-result/search-result.html" with result=result.specific %}
+                            </li>
+                        {% endfor %}
+                    </ul>
 
-    {% elif search_query and not search_picks %}
-        No results found.
-    {% endif %}
+                    {% include "patterns/molecules/pagination/pagination.html" with paginator_page=search_results %}
+
+                {% elif search_query and not search_picks %}
+                    No results found.
+                {% endif %}
+
+            </section>
+
+        </div>
+    </div>
+
 
 {% endblock %}
