--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -103,6 +103,8 @@
 @import 'components/schools';
 @import 'components/scroll';
 @import 'components/search';
+@import 'components/search-list';
+@import 'components/search-result';
 @import 'components/search-toggle';
 @import 'components/section';
 @import 'components/share';
