--- a/rca/project_styleguide/templates/patterns/molecules/search-result/search-result.html
+++ b/rca/project_styleguide/templates/patterns/molecules/search-result/search-result.html
@@ -1,13 +1,18 @@
 {% load static wagtailcore_tags wagtailsearchpromotions_tags wagtailimages_tags %}
 
 <div class="search-result">
-    <a class="search-result__link" href="{% pageurl result %}">
-        <h3 class="search-result__heading">{% firstof result.listing_title result.title %}</h3>
-        {% if search_pick %}<div class="search-result_editor-pick">Editor's pick</div>{% endif %}
-        {% if result.listing_meta %}<p class="search-result__meta">{{ result.listing_meta }}</p>{% endif %}
+    <a class="search-result__link grid" href="{% pageurl result %}">
+        <div class="search-result__header layout__@large-start-two layout__@large-span-one">
+            <h3 class="search-result__heading heading heading--five">{% firstof result.listing_title result.title %}</h3>
+            {% if search_pick %}<div class="search-result__editor-pick body body--support">Recommended result</div>{% endif %}
+        </div>
+        {% if result.listing_meta %}<p class="search-result__meta layout__@large-start-three layout__@large-span-one body body--two">{{ result.listing_meta }}</p>{% endif %}
         {% if pick.description or result.listing_summary or result.search_description %}
-            <p class="search-result__summary">{% firstof pick.description result.listing_summary result.search_description %}</p>
+            <p class="search-result__summary layout__@large-start-four layout__@large-span-two body body--one">{% firstof pick.description result.listing_summary result.search_description %}</p>
         {% endif %}
+        <svg class="search-result__icon" aria-hidden="true">
+            <use xlink:href="#arrow-right-filled"></use>
+        </svg>
     </a>
 </div>
 
