--- a/rca/project_styleguide/templates/patterns/pages/search/search.html
+++ b/rca/project_styleguide/templates/patterns/pages/search/search.html
@@ -1,7 +1,7 @@
 {% extends "patterns/base_page.html" %}
 {% load static wagtailcore_tags wagtailsearchpromotions_tags %}
 
-{% block body_class %}template-searchresults{% endblock %}
+{% block body_class %}app--search{% endblock %}
 
 {% block title %}{% if search_query %}Search results for &ldquo;{{ search_query }}&rdquo;{% else %}Search{% endif %}{% endblock %}
 
@@ -24,15 +24,15 @@
 
             <section class="section bg bg--light">
 
-                <div class="section__row section__row--first-small section__row--last-extra-small">
-                    {% if search_query %}
+                {% if search_query and search_results %}
+                    <div class="section__row section__row--first-small section__row--last-extra-small">
                         {% with count=search_results.paginator.count %}
                         <div class="search__header grid">
                             <h2 class="layout__@large-start-two layout__span-two layout__@large-span-three heading heading--four">Results for ‘{{ search_query }}’ <span class="search__count">{{ count }}</span></h2>
                         </div>
                         {% endwith %}
-                    {% endif %}
-                </div>
+                    </div>
+                {% endif %}
 
                 <div class="search-list section__row">
 
@@ -62,7 +62,11 @@
                         </div>
 
                     {% elif search_query and not search_picks %}
-                        {% include "patterns/molecules/no-results/no-results--no-filters.html" %}
+                        <div class="search-list__no-results grid">
+                            <div class="layout__@large-start-two layout__span-two">
+                                {% include "patterns/molecules/no-results/no-results--no-filters.html" %}
+                            </div>
+                        </div>
                     {% endif %}
 
                 </div>
