--- a/rca/static_src/sass/components/_search.scss
+++ b/rca/static_src/sass/components/_search.scss
@@ -76,5 +76,11 @@
             grid-column: 2 / span 2;
             padding-bottom: $gutter;
         }
+
+        .app--search & {
+            @include media-query(medium) {
+                padding-bottom: $gutter;
+            }
+        }
     }
 }
