[874] add event booking bar

--- a/rca/project_styleguide/templates/patterns/pages/events/event_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/events/event_detail.html
@@ -44,7 +44,7 @@
 
         </header>
 
-        {% if booking_bar and not page.past %}
+        {% if page.show_booking_bar and not page.past %}
             {% include "patterns/molecules/booking-bar/booking-bar.html" with item=booking_bar %}
         {% endif %}
 
